添加了进阶部分

--- a/advance/1.md
+++ b/advance/1.md
@@ -6,7 +6,7 @@ Go的数组和早期的C/Rust一样，大小都是编译期确定的，即a := [
 
 Slice的创建，增长等源码均在runtime/slice.go中实现，感兴趣可以看看，平时我们说一个变量是Slice类型，指的是它是一个**SliceHeader类型**。一个SliceHeader包含三个字段，分别是指向底层元素数组的指针，长度和容量。
 
-``` Golang
+``` go
 type SliceHeader struct {
 	Data uintptr
 	Len  int
@@ -18,6 +18,41 @@ type SliceHeader struct {
 
 如果函数传参传递一个数组，则会涉及到调用参数和函数参数的复制，即数组会被复制一份。而如果我们**传参传的是Slice，则复制的是SliceHeader，这仅仅涉及到三个基本类型的复制**，相对开销会小很多。所以在被调函数中我们可以访问到Slice的底层数组并进行修改。
 
-### unsafe
+这里说一下Slice的遍历，主要针对一些可能存在的坑进行叙述，首先是：
+
+``` go
+for idx, val := range slice {
+		// xxx
+}
+```
+
+这样的做法相当常见，其中idx是切片下表，val是切片元素。但是要注意，val在所有循环中一直是一个不变的变量，循环期间会不断获取val的地址并重写这个地址上的值为slice[idx]的值，所以**val每次会被复制，且地址不变**。如果不想要复制切片元素产生的性能开销，则可以使用slice[idx]访问到底层数组上的元素，并且可以进行修改。
+
+此外再来讨论关于内存泄露的一些点，如果引用了一个大切片的部分，那么相当于引用了整个切片，这就会导致大量内存得不到及时回收；可以考虑使用复制部分切片实现值传递，而非引用来切断引用关系。
+
+切片内如果保存指针类型，也会有类似的情况，删除元素会因为底层数组收缩不及时，而继续持有引用，可以通过置为nil来实现。
+
+最后，可以手动更改SliceHeader来实现强制类型转换，这里一般改的是底层数组指针的值。
+
+### 字符串
+
+字符串有些类似切片，我们先来看看StringHeader结构：
+
+``` go
+type StringHeader struct {
+	Data uintptr
+	Len  int
+}
+```
+
+可以看到，它就一个底层数组指针和长度组成，所以**字符串天然不可修改**，每次赋值和更改操作均会创建新的字符串。
+
+字符串底层是[]byte，所以可以直接通过str[idx]进行访问，此外，也可以强制类型转换成[]byte，如果通过for range遍历，则会得到码点，此时便利则变成了一个[]rune类型的数组的遍历，rune本质是一个int32类型。
+
+字符串支持Slice的切片操作，此时会生成新的字符串并拷贝数据。
+
+## unsafe
 
 Go保留了指针，但是却给予其一定的限制。所以有时候我们想像C语言那样实现对内存地址的完全访问和控制，就需要unsafe来帮我们。
+
+Unsafe包下最关键的两个类型则是Pointer和uintptr，这两个类型加上普通类型的指针类型，三者有着以下的关系：
