--- a/advance/1.md
+++ b/advance/1.md
@@ -114,3 +114,57 @@ func run() {
 
 
 其他操作，比如unsafe.Alignof()返回对象的对齐，如果对象是结构体，则是所有字段对齐的最大值，以此递归，如果是基本类型，就是本身大小；unsafe.Sizeof()返回对象内存大小，包含对齐大小；还有unsafe.Offsetof()返回字段距离结构体起始位置的大小，单位，字节。
+
+## 并发
+
+并发作为一个经久不衰的话题，我们自然不会落下，但是在叙述Go的并发之前，我想先说一下**happen-before原则(以下简称h-b)**。
+
+### happen-before
+
+h-b更像是一个判断依据，通过它，我们可以**判断两个不同Go程的读写操作是否满足预期结果**。怎么理解这句话呢？首先，在多个Go程中，因为指令排序和Go程调度，又或者是L1缓存的存在，导致对于同一变量的读，不一定会读到另一个Go程写入的值，即**共享变量的更新可见性无法被保证**。而**满足h-b原则的两个读写操作，先写的更新一定会被后读的读所捕获，不满足h-b的读写则没有这样的结论**。
+
+说白了h-b可以作为判断后读是否可以读到先写的值得一个依据，**它是判断这一结果的原则，而不是保证这一结果的原则**。
+
+那为什么会引入h-b原则呢？因为在同一个Go程中，即使存在指令重排序，代码的执行结果也一定符合书写顺序，这是编译器可以保证的；但是在多个Go程中，则没有这种保证，对于Go程A，它看到的Go程B对于某一变量的写可能晚于自己的读，即使从源码来看这件事是不可能的。所以**我们急需一个原则去告诉我们，这个读操作到底能不能读到另一个Go程的更新？**这个原则就是h-b。对于两个事件r-w，如果r h-b于w，或者w h-b于r(**r happen-after w**)，则称它们之间存在顺序关系，但是**如果r 既不h-b于w，w也不h-b于r，那么我们称r-w两个事件是happen-concurrently，即并发的**。
+
+如果上述官方术语让读者读不懂的话，我用一个简单的符号表示h-b，即'<'(小于号)。**a h-b b写成a < b，说明a事件先于b事件发生**。如果a和b不存在小于关系，我们就得不到这个结论(废话)。而**如果a >= b且b >= a，则a和b是并发的**。
+
+编程语言一般都存在一些天然的h-b关系，同时还存在一些可以人为实现的h-b关系，或者可以由上述两者推导出来的h-b关系，**除此之外，都是无法确定h-b关系的**。
+
+让我们来看看[官方文档](https://go.dev/ref/mem)对于这些的叙述：
+
+* 在单线程中，对于一个变量的读写顺序就是书写顺序。
+* 在多Go程中，只有满足如下准则，读操作才能读到写更新：
+  * 读**从不**会h-b于写。
+  * 在写读之间没有第二个写h-b在第一个写之后，且h-b在读之前。
+* 再来一个更加犀利的准则，确保读可以读到写更新：
+  * 写h-b于读。
+  * 任何其他的写一定h-b于这个写或者被h-b于读(在读之后)。
+* 如果没有这些准则，就需要手动添加同步原语以保证达到想要的效果。
+* 此外，变量创建时的赋初值属于对变量的写操作。
+
+那么在Go中存在哪些同步原语可以确保h-b呢？我们不妨来数数：
+
+* init函数调用h-b于任何一个此go文件中的函数调用，h-a于所有它所引用的go文件的init函数调用。
+* Go程的创建h-b于此Go程中的任何部分。
+* Go程的销毁h-a于它的任何部分，但是h-c于它所在的函数任何部分；即Go程里新开的Go程退出时间我们无法确定，和它周围的代码是h-c关系。
+* 对于一个无缓冲的chan，接收操作h-b于发送操作**结束**；发送操作h-b于接收操作**结束**。即接收/发送**开始**h-b于发送/接收的**结束**。
+* 上述关于无缓冲chan的描述，换成h-a更好，即接收操作的完成一定h-a于发送操作开始，反之亦然，方便理解。
+* 此外，close一个chan，会触发零值返回，所以close一个chan就像发送了一个零值一样，虽然有一些不同，但是在同步中的作用是类似的。
+* 对于一个缓冲的chan，第K的接收操作先于第K+capacity个发送操作完成。
+* Mutex锁实现的同步原语，无论是锁还是读写锁都存在m<n，有第m次释放锁先于n次加锁完成(即加锁函数返回)。
+* sync.Once也可以实现，Once参数的调用(它的参数是个函数)早于所有对于Once.do()的调用完成(即Once.do()返回)。
+
+关于channel，看一张图：
+
+![go_chan](/Users/joker/GolandProjects/GoBaseLearn/advance/go_chan.svg)
+
+现在来看看Go可能的同步使用方法。
+
+最常用的就是chan。chan的灵活使用和Go强调的基于管道通信，CSP技术有着莫大的关系。除了简单的通过chan来实现happen-before以此来控制多Go程执行顺序之外，还有以下用法：
+
+* 设置带缓冲的chan，实现最大并发控制。
+* 作为信号通知，控制其他Go程的退出。
+* 作为timer返回值使用，实现定时器功能。
+
+然后就是Mutex/RWMutex，类似Java的锁和读写锁。就是普通的可重入锁，底层实现包含一个虚拟队列和资源值，通过CAS设置，失败了自旋/入队。
