--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -276,4 +276,118 @@ Golang的汇编属于自己独有的一套，语法标准啥的和AT&T或者Inte
 
 在了解了Golang汇编的内存布局和简单的架构之后，本章目的就完成了！毕竟先读懂，再去写，利用汇编压榨CPU，把性能发挥到极致；或者利用汇编实现一些越权操作，定制化属于我们自己的功能。
 
+## Golang接口
+
+Golang的接口无非就是带方法的iface和没有方法的空接口eface：
+
+```go
+type eface struct {
+    _type *_type         // 类型指针
+    data  unsafe.Pointer // 数据指针
+}
+
+
+type iface struct {
+    tab  *itab          // (类型+方法集)指针
+    data unsafe.Pointer // 数据指针
+}
+```
+
+然后来详细看一下它们的结构：
+
+```go
+type _type struct {
+    size       uintptr                                   // 此接口类型背后的实际类型占用空间大小
+    ptrdata    uintptr                                   // 用不到，不理解
+    hash       uint32                                    // 实际类型hash码，作为类型唯一ID用的，用于比较类型是否相同，下面还有一个比较对象的
+    tflag      uint8                                     // 用不到
+    align      uint8                                     // 内存偏移量
+    fieldAlign uint8                                     // 字段偏移量，可能是结构体字段用的
+    kind       uint8                                     // Go的内置类型，我猜的
+    equal      func(unsafe.Pointer, unsafe.Pointer) bool // 用于比较此类型的两个对象是否相同
+    gcdata     *byte                                     // GC用的
+    str        int32                                     // 类型名称字符串在可执行文件中的偏移量
+    ptrToThis  int32                                     // 此类型在可执行文件中的偏移量
+}
+
+type itab struct {
+    inter *interfacetype // 记录iface的抽象结构，包含方法表等信息，这个接口变量的静态类型
+    _type *_type         // 同上的结构，这个接口变量的实际类型
+    hash  uint32         // _type.hash的拷贝，单纯方便使用，免得还要通过_type查hash，指出了实际类型的hash码
+    _     [4]byte        // 保留
+    fun   [1]uintptr     // 函数表指针，虽然数组长度为1，但是后面可以跟着好多个函数地址，这个值指向第一个函数的地址，有种数组指针的味道
+}
+
+type interfacetype struct {
+    typ     _type     // 接口的变量的静态类型，也就是这个接口类型
+    pkgpath name      // 接口的包路径
+    mhdr    []imethod // 接口的方法表
+}
+
+type imethod struct {
+    name int32 // 方法名称
+    ityp int32 // 方法所属的接口的类型
+}
+```
+
+然后通过一张图来理解：
+
+<img title="" src="./interface.svg" alt="" data-align="inline">
+
+Go判断一个类型T能否赋值给一个接口A的方法比较硬核：**遍历eface的mhdr，然后和类型T的所有的方法进行比对**，时间复杂度是O(m\*n)，但是Go进行了优化，使用字典序排序，以至于只有O(m+n)，如果全部匹配，则认为T类型实现了接口A。
+
+这里解释一下为什么接收者为指针的类型T的实例无法赋值给接口A，以前总是背说Go可以自动解引用，但是无法自动取地址，其实不然。
+
+首先明确一点，**Go调用方法类似调用一个第一个参数是类型实例或类型指针(取决于接收者类型)的普通函数**。Go都是值传递，如果使用对象值去调用接口的方法，会导致实例被复制，然后基于此新实例取地址去调用接口，倘若此时涉及到字段的更新，则无法响应原先的实例，这会造成程序bug。所以Go禁止此方法。而如果通过指针去调用接口方法，即使是值传递，传的也是指针，对实例的更新一定会响应回实例对象。
+
+关于接口和对象之间的转换。
+
+我们假设有这么一段代码：
+
+- 新建类型T的实例obj；
+
+- 强制把obj转为interface得到iobj；
+
+- 通过iobj调用方法；
+
+- 通过obj调用方法；
+
+- 把iobj转换成obj0；
+
+首先编译器在编译时，针对类型T，生成了它独有的_type结构，并保存在某个位置(我他妈也不知道在哪里)，然后
+
+- 调用runtime.newobject(_type)为T的新实例分配空间，并在栈上设置变量obj，注意哈，实例对象是在栈上的，当然可能会因为逃逸分析放在堆上，那此时对变量的访问就会变成通过指针对于堆的访问了。
+
+- 初始化obj；
+
+- 调用runtime.convT2I方法，入参分别是T经过检查之后针对接口A生成的的tab和obj的指针，因为这个函数只能接收数据指针，所以此时的指针就是栈上保存obj的地址；
+
+- 把上述函数返回值作为iface结构体的字段，进行构造；
+
+- 通过查找iobj的fun，找到对应方法，设置方法入参(推入栈中)，调用方法。
+
+- 直接调用obj的方法；
+
+- 通过iobj的hash与T的_type比较判断是否可以转换，如果可以，则创建T类型的变量obj0，然后使用iobj的数据指针指向的空间填充变量，实现复原。
+
+涉及到的函数签名：
+
+```go
+func newobject(typ *_type) unsafe.Pointer
+
+func convT2I(tab *itab, elem unsafe.Pointer) (i iface)
+
+func convT2E(t *_type, elem unsafe.Pointer) (e eface)
+```
+
+对于eface的处理则会简单一些，因为不需要进行方法列表比对，查表，动态分发(只有被转换之后才能调用方法)等操作。每次转换简单对比一下hash码，然后新建变量，使用数据指针填充即可。简单描述一下就是：如果原本的变量是指针类型，那数据指针指向的就是指针保存的地址的地址，噼里啪啦一顿操作之后，新的变量的值等于数据指针指向地址的保存的值，此时新的变量成为了一个指向T类型的指针，这当然很简单啦！如果是普通类型，那就是一个T类型的变量，然后依旧使用数据指针指向的内存空间进行变量填充。
+
+这里有一个小坑，接口类型只有两个字段全为nil时，接口才是nil的，啥意思呢？当你把值为nil的指针类型转换成接口时，转换后的接口变量不是nil，因为它的_type并不是nil，而是具体的指针类型。
+
+什么类型断言啊，什么类型转换啊，什么接口转换啊，什么接收者类型是指针还是实例啊巴拉巴拉的，上面的一些话和图基本都覆盖了，接口的知识到此结束！
+
+## GMP
+
+## 垃圾回收
+
 ## 远程调用
