--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -386,6 +386,40 @@ func convT2E(t *_type, elem unsafe.Pointer) (e eface)
 
 什么类型断言啊，什么类型转换啊，什么接口转换啊，什么接收者类型是指针还是实例啊巴拉巴拉的，上面的一些话和图基本都覆盖了，接口的知识到此结束！
 
+## 反射
+
+本来Go的反射还能讲一些，但是现在把接口理完了之后，似乎一切都变得那么简单。
+
+反射核心就是：
+
+```go
+func TypeOf(i interface{}) Type
+
+func ValueOf(i interface{}) Value
+```
+
+它们负责把interface{}转换成反射对象，当然了，反射对象也可以转换成interface{}，其实这就是反射三大定律的两个。
+
+- 可以从interface{}得到反射对象
+
+- 可以从反射对象得到interface{}
+
+- 想要修改反射对象，它的值必须是可设置的
+
+我们可以看到，两个核心方法的入参都是interface{}类型，当我们调用时，编译器会自动做类型转换，所以我们有了下面的对应关系：
+
+![](./reflect.svg)
+
+这里interface{}会被处理得到emptyInterface的结构体，这个结构体和上面的iface一模一样，那到这里，一切就清晰了。
+
+emptyInterface里面的数据指针则是Value的值来源，\*rtype则是Type的值来源，此时我们清楚地得到了类型结构体和值指针，想要获取一些就是直接读取和解析的事儿。
+
+以结构体为例，结构体方法是有序存放在结构体类型后面的，偏移量亦是固定的，想要访问方法列表，需要把emptyInterface转换成structTypeUncommon，然后读取相关的方法偏移量找到方法列表，以及方法个数等。
+
+对于通过反射设置值，需要注意，如果是普通的变量，则可能会因为触发了值复制，因为无法设置到原对象上，此时简单使用指针传参即可，但是接的后面的处理通过Elem()方法解引用来进行设置，就好像普通的指针操作一样。
+
+至于Go编译器是怎么把T转换成interface{}的，个人猜测因为编译器会为T类型生成相关的类型结构体，类似_type之类的结构，这个结构体保存在可执行文件的某一只读区域中，后期涉及到转换的，使用这个结构体的部分字段填充interface的_type/rtype即可，之后就得到了一个包含T类型变量相关信息的interface{}，一切起因都是编译器可以保存T的类型信息，然后在需要的时候获取。
+
 ## GMP
 
 ## 垃圾回收
