defer/panic/recovery; make/new

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -588,6 +588,16 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 
 ![](./select_chan.svg)
 
+## defer = panic/recovery; make = new
+
+回首思考Go的一些语言特性，我们想到了标题的这些关键词，现在来好好看看它们的实现，并借此加深对它们的理解。
+
+首先是defer，它是延迟函数，单纯就使用上来说，它实现了defer定义的函数**在return之前，当前函数所有语句之后**执行。很适合用于关闭资源，锁释放等操作。
+
+此外，defer有一个需要注意的点就是对于被延迟执行的函数，其参数是在**defer定义的时候**以值传递(Go都是值传递)的形式拷贝到参数空间中去的。这意味着，如果**试图读取主函数defer之后的变量值，是无法读取到的**。这个原因我们下面会在defer的编译提及，如果使用匿名函数，则可以实现此效果，因为此时传递的是匿名函数，而函数的参数会因为匿名函数捕获而得到更新。所以**不会被defer的“定义时就传参”给锁定**。
+
+一个函数可以使用多个defer，最终执行顺序和生命顺序相反
+
 ## GMP
 
 ## 垃圾回收
