--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -592,11 +592,26 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 
 回首思考Go的一些语言特性，我们想到了标题的这些关键词，现在来好好看看它们的实现，并借此加深对它们的理解。
 
-首先是defer，它是延迟函数，单纯就使用上来说，它实现了defer定义的函数**在return之前，当前函数所有语句之后**执行。很适合用于关闭资源，锁释放等操作。
+首先是defer，它是延迟函数，单纯就使用上来说，它实现了defer定义的函数**在“真正的”return之前，当前函数所有语句之后**执行。很适合用于关闭资源，锁释放等操作。
 
-此外，defer有一个需要注意的点就是对于被延迟执行的函数，其参数是在**defer定义的时候**以值传递(Go都是值传递)的形式拷贝到参数空间中去的。这意味着，如果**试图读取主函数defer之后的变量值，是无法读取到的**。这个原因我们下面会在defer的编译提及，如果使用匿名函数，则可以实现此效果，因为此时传递的是匿名函数，而函数的参数会因为匿名函数捕获而得到更新。所以**不会被defer的“定义时就传参”给锁定**。
+这里需要提一下什么是所谓的**“真正的”return**？Go对于返回值定义了两种返回方式：裸返回和命名返回。
 
-一个函数可以使用多个defer，最终执行顺序和生命顺序相反
+- 裸返回就是直接编写需要返回的类型
+- 命名返回则是在返回类型前面指出返回值的名称，此时也相当于**创建了一个返回变量**。
+
+注意，“创建了一个返回变量”这句话很重要。因为Go在return之前，会把返回值赋值给返回变量，返回变量可以看成是保存返回值的空间，然后编译器会把这里面保存的值写入到主调函数的栈返回值空间，所以唯有把返回值赋给了返回变量才会真的写入到主调函数栈空间上的返回值里去。
+
+而**裸返回则会因为没有返回变量，而通过编译器在return语句之前创建一个ret变量作为返回变量**。或者说，会在RET(这是汇编级别的返回)语句之前，把返回值拷贝到主调函数的栈空间上。
+
+此外，defer有一个需要注意的点就是对于被延迟执行的函数，其**参数**是在**defer定义的时候**以值传递(Go都是值传递)的形式拷贝到参数空间中去的。这意味着，如果**试图读取主函数defer之后的变量值，是无法读取到的**。如果使用匿名函数，则会把参数传递延迟到执行时，函数的参数会因为匿名函数捕获而得到更新。
+
+或者这么来理解，这一现象和defer无关，defer只是把函数的执行延迟到了返回值之前，而匿名函数对于值的捕获会延迟到调用时，这样。
+
+一个函数可以使用多个defer，最终执行顺序和生命顺序相反，这样执行的原理我们下面会提及。
+
+这里还有一个小坑，就是上面提到的返回变量。defer会在RET指令之前执行，如果此时没有“返回变量”，则会创建返回变量并赋值，**这一步是先于defer的，所以如果defer会更新返回值，将无法被主调函数感知**。解决的方式就是在函数声明里定义返回变量，然后在defer访问返回变量(即访问栈返回空间)即可实现更新可见。
+
+现在到了喜闻乐见的结构体窥探环节：
 
 ## GMP
 
