defer/panic/recovery; make/new

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -599,7 +599,7 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 - 裸返回就是直接编写需要返回的类型
 - 命名返回则是在返回类型前面指出返回值的名称，此时也相当于**创建了一个返回变量**。
 
-注意，“创建了一个返回变量”这句话很重要。因为Go在return之前，会把返回值赋值给返回变量，返回变量可以看成是保存返回值的空间，然后编译器会把这里面保存的值写入到主调函数的栈返回值空间，所以唯有把返回值赋给了返回变量才会真的写入到主调函数栈空间上的返回值里去。
+注意，“创建了一个返回变量”这句话很重要。因为Go在return之前，会把返回值赋值给返回变量，返回变量可以看成是保存返回值的空间，然后编译器会把这里面保存的值写入到主调函数的栈返回值空间，所以**唯有把返回值赋给了返回变量才会真的写入到主调函数栈空间上的返回值里去**；或者说**主调函数得到返回值会通过读取返回变量来实现**。
 
 而**裸返回则会因为没有返回变量，而通过编译器在return语句之前创建一个ret变量作为返回变量**。或者说，会在RET(这是汇编级别的返回)语句之前，把返回值拷贝到主调函数的栈空间上。
 
@@ -612,6 +612,44 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 这里还有一个小坑，就是上面提到的返回变量。defer会在RET指令之前执行，如果此时没有“返回变量”，则会创建返回变量并赋值，**这一步是先于defer的，所以如果defer会更新返回值，将无法被主调函数感知**。解决的方式就是在函数声明里定义返回变量，然后在defer访问返回变量(即访问栈返回空间)即可实现更新可见。
 
 现在到了喜闻乐见的结构体窥探环节：
+
+``` go
+type _defer struct {
+	siz       int32    // 参数和结果的总大小
+	started   bool     // 是否启动
+	heap      bool     // 是否分配在堆上
+	openDefer bool     // 是否开始开放编码优化
+	sp        uintptr  // 栈指针
+	pc        uintptr  // 程序计数器
+	fn        *funcval // 匿名函数
+	_panic    *_panic  // 正在运行defer的panic
+	link      *_defer  // defer调用链表，每一个新的defer都会添加到表头
+}
+```
+
+每一个Goroutine结构体，都有两个字段\_defer和\_panic，_defer指向了defer链表的第一个元素，这也是记录当前Goroutine的defer的方式。d**efer的执行会被编译器编译成两个相关的运行时函数：deferproc，deferreturn**；并由编译器传递参数，等待运行时调用。
+
+这里需要说一下，编译器做的详细细节是：定义defer的位置会被替换成deferproc调用并设置传参，然后在当前函数RET之前插入deferreturn调用。
+
+``` go
+func deferproc(siz int32, fn *funcval)
+func deferreturn()
+```
+
+- deferproc：根据defer的定义生成\_defer结构体，并使用匿名函数，参数，pc，sp等值初始化这个结构体，并**追加到当前goroutine的_defer链表前面去**。
+- deferreturn：获取表头\_defer并跳转至定义它的位置，执行defer定义的延迟函数；并再次获取下一个\_defer，直到最后一个\_defer为止。
+
+上述大致就是defer的实现原理，此外，为了优化defer调用(毕竟这里牵扯到了一堆的runtime的调用)，Go会适当的把\_defer分配在栈上，或者直接内联在当前函数里(开放编码法)，至于何时触发这些优化，则是有相关的严苛条件作为限制。堆上分配的\_defer会把参数放在相邻的空间上，栈上分配的会把参数一样分配在栈上，内联优化的则会直接作为当前函数的局部变量使用。
+
+panic用于程序的崩溃，它会改变程序的执行流，但是如果通过recovery()进行恢复，则可以阻止panic外泄。具体实现如下：
+
+- panic会被编译器编译成gopanic调用，此函数以崩溃信息为入参，构建\_panic结构体，得到panic变量，并依次获取当前goroutine的\_defer链表的元素，使用运行时方法调用\_defer；
+- 循环结束后，会根据panic变量是否为空决定是否继续外泄。
+- 对于defer变量的调用，包括把defer的匿名函数中的recovery()转换成gorecovery调用，这个调用相当简单，就是判断当前goroutine是否为空，如果不是，则返回panic参数，并设置panic变量的recovered为true，表示已恢复，这样在循环中的调用就会知道panic已经被恢复了，便不需要继续外泄。
+
+所以panic之后，只会调用defer，所以recovery()只有在defer中才会生效；而如果panic变量不存在当前goroutine的/_panic链表中，recovery()则会返回nil。
+
+new适用于分配内存空间并赋零值，返回一个指向此空间的指针；make用于构建内建类型，比如slice，chan，map等，返回一个结构体实例。
 
 ## GMP
 
