--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -651,6 +651,19 @@ panic用于程序的崩溃，它会改变程序的执行流，但是如果通过
 
 new适用于分配内存空间并赋零值，返回一个指向此空间的指针；make用于构建内建类型，比如slice，chan，map等，返回一个结构体实例。
 
+## Context
+
+Go的上下文(context)设计属于Go独有的一种设计。如果你曾经写过JavaWeb，应该知道Servlet的上下文传参，虽然Go的context也可以这么用，但是它更多是**为了解决多goroutine下的信号同步问题**。
+
+我们以HTTP请求为例，Go对于每一个请求都会开辟一个goroutine去处理，而在业务逻辑中，对于数据库，磁盘，远程调用的访问，也会开辟新的goroutine去处理。那么怎么合适的在这些存在上下级关系的goroutine之间传递信号，尤其是取消信号，超时信号便显得尤为关键。我们当然可以使用共享内存，chan去实现，但这样在许多的goroutine中就显得略微低效了，于是Go引入了context来解决这一问题。
+
+常见的context包括：Background()，TODO()，WithCancel()，WithTimeout()，WithDeadline()。Background很多时候作为根context进行派生子Context使用，TODO的实现和它一样，区别在于TODO用于不确定该使用哪种Context时。
+
+- WithCancel会创建一个可以传递取消信号的Cancel，如果其父Cancel被取消，它也会被取消
+- WithTimeout和WithDeadline实现差不多，都是创建一个可以在未来某段时间触发超时取消的context。
+
+此外，还有WithValue，它的作用就是在多个goroutine中设置值并可以传递给子context，同时可以读取父context的值。
+
 ## GMP
 
 ## 垃圾回收
