--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -751,6 +751,116 @@ WaitGroup和Cond用法有些类似。
 
 Once则可以用来实现单例，或者只执行一次的场景，内部使用双重检验锁保证。
 
+## 定时器
+
+> “如果让你实现一个定时器，你会怎么做呢？”
+>
+> “如果再给你一个park(nanoseconds)函数呢？”
+
+
+
+> 首先我们会设置一个有序列表，依据执行时间排序... ...
+>
+> 然后开辟一个线程不停取出列表第一个元素，计算间隔时间，park挂起，等待第一个任务时间到达去执行裹挟的函数... ...
+>
+> 记录当前最早执行时间，每次添加任务记得对比最早时间，然后排序列表... ...
+>
+> 如果遇到更早的任务，只能唤醒执行线程，排序，设置最早时间，计算间隔，park... ...
+>
+> 也有可能需要取消任务，所以引入一个flag标识，指出是否真的需要执行，但是这样依旧会在当前时间点唤醒线程... ...
+>
+> 或许需要一个清理被移除的任务的函数，又或者，需要定时线程自己去检测... ...
+>
+> 同样，我们还需要锁去保证并发情况下的正确性... ...
+
+我曾经基于Redis做了一个持久化定时器，不能保证绝对的精度，但是可以做到被删除的任务绝对不会被真的执行(除非已经开始了)，而且支持宕机重启恢复，并且绝对的串行化执行... ...不过这一切在Go的定时器面前，就显得小巫见大巫了，这里倒不是说Go的定时器真的很复杂，而是在经过了三版本迭代之后，Go的定时器性能，精度都得到了很大的提高，我们直接以最新的定时器实现，即1.14+版本的定时器实现，来分析Go中无处不在的Timer！
+
+正如我们设想的那般，定时器需要有序列表，而且最好可以自动排序，Go选择了堆，但是不是我们常见的二叉堆，而是四叉堆，反正是堆就是了，来保证定时任务的有序性。
+
+早期的堆只有一个，一个堆里涉及到太多的goroutine去访问，因此锁的压力很大，为了缓解这种情况，Go把堆的数量扩大到64个，为什么是个定值，因为每次根据P的数量去更改太麻烦了，也不好复用；而且很少有CPU数量超过64个的，所以实现了一个P对应一个堆的方法。
+
+因为一个goroutine只能由P来运行，所以在P小于等于64的情况下，这几乎没有并发的(但是可能存在工作窃取导致细微的并发)；但是这里有一个小问题，就是对于定时任务的处理，涉及到定时器goroutine(运行定时任务方法的那个)和当前goroutine的上下文切换，因为它俩可能不在一个P上，在这里的设计是timerproc去处理定时器任务，这本身是一笔不小的开销，所以有了下面的优化。
+
+新的设计方式把堆定在了P上，并且定时器的运行由P负责，然后对于定时器的运行通过三个入口触发，并且对于定时的唤醒交由多路复用去实现，确保所有的park操作的唤醒都由一个线程负责，有点类似于之前的park的唤醒是阻塞IO，而这里把所有park的唤醒交由NetPoll去处理，实现了多路复用的效果。
+
+老规矩，先看结构，刚刚提到定时任务列表，就是堆，保存在了P里面，那直接看P的结构：
+
+``` go
+type p struct {
+	timer0When            uint64   // 堆顶任务的when的拷贝
+	timerModifiedEarliest uint64   // 所有被修改的timer的最早时间
+	timersLock            mutex    // 定时器锁
+	timers                []*timer // 定时器列表
+	numTimers             uint32   // 定时器数量
+	deletedTimers         uint32   // 被删除的定时器数量
+}
+
+type timer struct {
+	pp       puintptr                   // 定时器所属的p
+	when     int64                      // 定时器执行的时间
+	period   int64                      // 定时器执行的间隔，如果是0表示只执行一次
+	f        func(interface{}, uintptr) // 需要定时器去执行的函数
+	arg      interface{}                // 函数参数
+	seq      uintptr                    // ？
+	nextwhen int64                      // 保存更新之后的when的值，为什么不直接更新when后面会提及
+	status   uint32                     // 定时器十个状态之一
+}
+```
+
+在我们正式展开之前，我们来看看定时器的状态以及转换关系：
+
+![](./timer_status.svg)
+
+除了上述的状态，对于ing的状态，比如Runing，Modifying，Moving，可能会被要求让出CPU供其他goroutine使用(如果此时另一个goroutine正在更新状态的话)。
+
+定时器的核心方法有六个，它们共同协作，切换状态，唤醒NetPoll，重排任务... ...
+
+``` go
+// 添加定时器
+func addtimer(t *timer)
+// 移除定时器，只是设置deleted状态，不会真的从堆移除，原因在于这个任务所在的堆有可能不属于当前P
+func deltimer(t *timer) bool
+// 更新定时器
+func modtimer(t *timer, when, period int64, f func(interface{}, uintptr), arg interface{}, seq uintptr) bool
+// 应该是清理，不是清除
+func cleantimers(pp *p)
+// 整理定时器，包括把modifyEarlier/Later的任务前移/后移，和remove状态为deleted的任务
+func adjusttimers(pp *p, now int64)
+// 获取第一个任务并执行
+func runtimer(pp *p, now int64) int64
+```
+
+我们自然不会全部展开来讲，我们只是分析共性的地方。
+
+- 对于状态的更新，使用CAS+for{}而不是锁操作，可以更好地提升性能；
+- 引入中间状态，可以感知其他goroutine的更新，进而决定是否要继续还是退出更新，让出CPU；
+- 中间状态还有一个作用，就是可以实际的移动，移除，运行操作延迟到任务所属的P，而非当前P上去执行；
+
+addtimer函数本身实现比较简单，对堆加锁，然后cleantimers，这里面设计对deleted的remove，对earler/laster的处理(先删除，再添加)，唤醒NetPoll，唤醒NetPoll会判断新的t是否拥有更早的时间(通过全局变量sched的字段来记录)，是的话唤醒NetPoll。
+
+deltimer的实现也很简单，它只会更新状态为deleted，但是不会remove，等待clean，add，adjuest，run来清理。
+
+modtimer的实现略微复杂，先变更需要的状态，然后对已移除的处理(重新添加回来)，最后需要唤醒NetPoll。
+
+cleantimers则是把需要前移和后移的任务移动到最后边，然后更新状态为Wating等待重排序和执行，然后remove所有的deleted任务。
+
+adjusttimers则是把调整任务移动到正确的位置，然后清空deleted任务。
+
+runtimer实现比较简单，获取第一个任务，看是否是Waiting(也就相当于Runnable状态了)的，如果是，判断是否可立即执行并执行，否则返回执行时间；如果不是Wating的，则进行相应的状态后阶段变更，这里和前面几个函数一样的实现，什么deleted到removed，什么前移后移。
+
+讲完了核心方法，很容易发现，这些方法是合作工作的，其中很多方法仅仅只是变更到ing状态，并且让出CPU，让另一个会被触发的实际运行的方法去完成接下来的工作。
+
+定时器的触发则是由checkTimers实现。checkTimers的调度时机有三个：
+
+- runtime.schedule
+- findrunnable获取可执行的goroutine时
+- findrunnable从其他的P窃取定时器时
+
+checkTimers主要做了一下工作：
+
+- 检查是否存在需要调整的定时器，如果存在，则锁住P，调用adjusttimers调整；并运行runtimer；
+- 如果不存在，看看是否存在需要立即执行的任务，有的话执行，没有的话判断需要删除的任务是否大于1/4总任务量，不大于直接返回，大于则触发整理。
+
 ## GMP
 
 ## 垃圾回收
