--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -861,6 +861,8 @@ checkTimers主要做了一下工作：
 - 检查是否存在需要调整的定时器，如果存在，则锁住P，调用adjusttimers调整；并运行runtimer；
 - 如果不存在，看看是否存在需要立即执行的任务，有的话执行，没有的话判断需要删除的任务是否大于1/4总任务量，不大于直接返回，大于则触发整理。
 
+当任务无法被立即执行时，会获得最近的任务执行时间，然后由checkTimers的调用方添加至NetPoll实现唤醒调用方，而后继续执行checkTimers，到这里，对于定时器的大概原理就很清晰了。
+
 ## GMP
 
 ## 垃圾回收
