--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -836,17 +836,19 @@ func runtimer(pp *p, now int64) int64
 - 引入中间状态，可以感知其他goroutine的更新，进而决定是否要继续还是退出更新，让出CPU；
 - 中间状态还有一个作用，就是可以实际的移动，移除，运行操作延迟到任务所属的P，而非当前P上去执行；
 
-addtimer函数本身实现比较简单，对堆加锁，然后cleantimers，这里面设计对deleted的remove，对earler/laster的处理(先删除，再添加)，唤醒NetPoll，唤醒NetPoll会判断新的t是否拥有更早的时间(通过全局变量sched的字段来记录)，是的话唤醒NetPoll。
+addtimer函数本身实现比较简单，设置任务为Waiting，对堆加锁，然后cleantimers；追加到堆低，排序堆；唤醒NetPoll，唤醒NetPoll会判断新的t是否拥有更早的时间(通过全局变量sched的字段来记录)，是的话唤醒NetPoll。
 
-deltimer的实现也很简单，它只会更新状态为deleted，但是不会remove，等待clean，add，adjuest，run来清理。
+deltimer：实现也很简单，它**只会更新状态为deleted**，但是不会remove，等待clean，add，adjuest，run来清理，或者说，等**待任务所属的P执行到时才执行remove操作**。
 
-modtimer的实现略微复杂，先变更需要的状态，然后对已移除的处理(重新添加回来)，最后需要唤醒NetPoll。
+modtimer：实现略微复杂，先变更需要的状态，然后对已移除的处理(重新添加回来)，最后需要唤醒NetPoll。
 
-cleantimers则是把需要前移和后移的任务移动到最后边，然后更新状态为Wating等待重排序和执行，然后remove所有的deleted任务。
+cleantimers：**不停地获取堆顶任务**，如果是Earlier/Later的，则删除，接下来使用它的nextwhen更新when，添加到堆低(**先删后加**)，等待排序；如果当前**任务是deleted，则remove**，其他情况则终止。
 
-adjusttimers则是把调整任务移动到正确的位置，然后清空deleted任务。
+adjusttimers：把**调整任务移动到正确的位置**，然后**remove标记为deleted的任务**。
 
-runtimer实现比较简单，获取第一个任务，看是否是Waiting(也就相当于Runnable状态了)的，如果是，判断是否可立即执行并执行，否则返回执行时间；如果不是Wating的，则进行相应的状态后阶段变更，这里和前面几个函数一样的实现，什么deleted到removed，什么前移后移。
+runtimer：实现比较简单，获取第一个任务，看是否是Waiting(也就相当于Runnable状态了)的，如果是，判断是否可立即执行并执行，否则返回执行时间；如果不是Wating的，则进行相应的状态后阶段变更，这里和前面几个函数一样的实现，什么deleted到removed，什么前移后移。
+
+**涉及到对堆的更新，也会同时对堆排序，设置P的timer0When字段，即更新最小执行时间**。
 
 讲完了核心方法，很容易发现，这些方法是合作工作的，其中很多方法仅仅只是变更到ing状态，并且让出CPU，让另一个会被触发的实际运行的方法去完成接下来的工作。
 
