--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -802,7 +802,7 @@ type timer struct {
 	f        func(interface{}, uintptr) // 需要定时器去执行的函数
 	arg      interface{}                // 函数参数
 	seq      uintptr                    // ？
-	nextwhen int64                      // 保存更新之后的when的值，为什么不直接更新when后面会提及
+	nextwhen int64                      // 保存更新之后的when的值
 	status   uint32                     // 定时器十个状态之一
 }
 ```
@@ -810,7 +810,7 @@ type timer struct {
 在我们正式展开之前，我们来看看定时器的状态以及转换关系：
 
 ![](./timer_status.svg)
-
+Cancel changes
 除了上述的状态，对于ing的状态，比如Runing，Modifying，Moving，可能会被要求让出CPU供其他goroutine使用(如果此时另一个goroutine正在更新状态的话)。
 
 定时器的核心方法有六个，它们共同协作，切换状态，唤醒NetPoll，重排任务... ...
@@ -835,6 +835,8 @@ func runtimer(pp *p, now int64) int64
 - 对于状态的更新，使用CAS+for{}而不是锁操作，可以更好地提升性能；
 - 引入中间状态，可以感知其他goroutine的更新，进而决定是否要继续还是退出更新，让出CPU；
 - 中间状态还有一个作用，就是可以实际的移动，移除，运行操作延迟到任务所属的P，而非当前P上去执行；
+
+上面提到了nextwhen，为什么不直接更新是因为可能这个任务此时并不属于当前的P，更新需要交由所属的P完成，这里只是临时保存一下新的when值。
 
 addtimer函数本身实现比较简单，设置任务为Waiting，对堆加锁，然后cleantimers；追加到堆低，排序堆；唤醒NetPoll，唤醒NetPoll会判断新的t是否拥有更早的时间(通过全局变量sched的字段来记录)，是的话唤醒NetPoll。
 
