--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -594,7 +594,7 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 
 首先是defer，它是延迟函数，单纯就使用上来说，它实现了defer定义的函数**在“真正的”return之前，当前函数所有语句之后**执行。很适合用于关闭资源，锁释放等操作。
 
-这里需要提一下什么是所谓的**“真正的”return**？Go对于返回值定义了两种返回方式：裸返回和命名返回。
+这里需要提一下什么是所谓的**真正的return** ？Go对于返回值定义了两种返回方式：裸返回和命名返回。
 
 - 裸返回就是直接编写需要返回的类型
 - 命名返回则是在返回类型前面指出返回值的名称，此时也相当于**创建了一个返回变量**。
