--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -869,6 +869,211 @@ checkTimers主要做了一下工作：
 
 ## GMP
 
+现在来到了一个很重要的章节——Go的协程。这一节我不会特别深入某一些源码，更不会像之前章节那样翻译所有的调用，出于时间和精力，我决定从整体上去描述goroutine背后的巧妙，每一种机制的细节会在我尚有余力的某个下午，捡起键盘去用依旧可以运转的不聪明的大脑重新讲述。
+
+先从goroutine之间的**调度策略**来及入手分析。
+
+goroutine采用的是**抢占式协作+信号调度**的方式实现goroutine之间的通力合作。这里我们需要分开来讲，首先是抢占式这里没什么好说的，通过某种方式让另一个goroutine让出CPU以便当前goroutine去运行，所以是**抢占了目标goroutine的CPU使用权**。那具体怎么去“抢”呢？这里有两种方式：**协作和信号**。
+
+- 协作式抢占，通过在函数调用之间插入特殊方法，另一goroutine更新抢占变量的值，随着函数调用触发特殊方法的执行，进行检测抢占变量，进而触发当前goroutine让出CPU。
+- 信号式抢占，通过在M之间发送抢占信号(SIGURG)，实现对M的通知，进而触发信号处理函数执行，致使当前goroutine让出CPU。
+
+协作式和Java的GC实现STW很像，但是Java的实现是以“长时间执行”的语句作为判断依据，而Go仅仅是在函数调用之间触发对于抢占变量的检测，因而**无法处理for循环**这样的长时间情况，以及GC时长时间暂停用户程序的情况。
+
+为了弥补这一缺陷，引入了信号式，它会在程序启动时，**对每一个M注册一个信号处理函数**，进而**实现M对于抢占信号的捕获**，**触发信号处理函数的调用**，而后停止当前goroutine，包括GC。
+
+信号的选取要满足可以在线程之间透传，不会被系统方法捕获等特点，所以选用了SIGURG。
+
+这里面我们跳过了很多，比如信号处理函数具体的工作流程，包括设置G结构体的抢占标识位，重新开始调度，G对于标识位的检测，执行上下文保存等细节。
+
+分析完了调度策略，我们来看看**GMP三大结构体**的组成以及设计起因。
+
+G：
+
+``` go
+type g struct {
+	stacklow      uintptr        // 此goroutine的栈空间范围上限
+	stackheight   uintptr        // 此goroutine的栈空间范围下限
+	stackguard0   uintptr        // Go函数调用触发的栈增长判断用的阈值
+	stackguard1   uintptr        // CGO函数调用触发的栈增长判断用的阈值
+	m             *m             // 当前G所在的M
+	sched         gobuf          // 保存切换上下文用的，其实就是用来保存寄存器的结构
+	param         unsafe.Pointer // 传递参数用
+	atomicstatus  uint32         // G的状态
+	stackLock     uint32         // G的栈锁
+	goid          int64          // G的ID
+	schedlink     guintptr       // ？
+	waitsince     int64          // 等待的起始时间
+	waitreason    waitReason     // 当status==Gwaiting时的等待原因
+	preempt       bool           // 抢占信号，当stackguard0 == stackpreempt时，为true
+	preemptStop   bool           // 在抢占发生时status会被转换成_Gpreempted，否则取消调度
+	preemptShrink bool           // 在同步安全点收缩栈
+	lockedm       muintptr       // 与这个G锁定的M
+	sig           uint32         // 信号
+	gopc          uintptr        // 创建这个goroutine的go语句的PC
+	startpc       uintptr        // goroutine函数的PC
+	racectx       uintptr        // ？
+	waiting       *sudog         // 当前G等待的sudog，在chan里提到过// Available G's (status == Gdead)
+}
+
+type gobuf struct {
+	sp   uintptr
+	pc   uintptr
+	g    guintptr // 与它关联的G
+	ctxt unsafe.Pointer
+	ret  uintptr
+	lr   uintptr
+	bp   uintptr // 针对栈指针启用的架构，比如X64
+}
+```
+
+M：
+
+``` go
+type m struct {
+	g0         *g         // 用于实现调度的goroutine，也是所谓的系统goroutine
+	gsignal    *g         // 用于信号处理的goroutine
+	tls        [6]uintptr // 线程本地存储
+	mstartfn   func()     // M的启动函数
+	curg       *g         // 当前运行在M上的逻辑goroutine，也就是所谓的用户goroutine
+	p          uintptr    // 绑定的用于执行Go代码的P，如果没执行代码，则是nil
+	nextp      uintptr    // 下一个将和此M绑定的P
+	oldp       uintptr    // 上一个因为执行系统调用而被分离开的P
+	id         int64      // M的ID
+	preemptoff string     // 如果不为""，则保持curg继续在此M上运行
+	spinning   bool       // 为true表示M没有自己的工作，但是在尝试窃取别的G来运行
+	freeWait   uint32     // 如果为0，安全的释放G0并删除M
+	alllink    *m         // 全局M列表的指针
+	schedlink  uintptr    // 全局调度器变量的指针
+	lockedg    uintptr    // 锁定在此M上的G
+	nextwaitm  uintptr    // 下一个等待锁的M
+}
+```
+
+P：
+
+``` go
+type p struct {
+	id           int32        // P的ID
+	status       uint32       // pidle或者prunning之一
+	link         uintptr      // 链接其他的P
+	schedtick    uint32       // 每次调度器调用都会+1
+	syscalltick  uint32       // 每次系统调用都会+1
+	sysmontick   sysmontick   // sysmon上次记录的tick
+	m            uintptr      // 关联的M，如果是pidle状态，则是nil
+	mcache       *mcache      // M的缓存
+	pcache       pageCache    // 用于无锁分配内存
+	goidcache    uint64       // shced.goidgen的缓存
+	goidcacheend uint64       // ？
+	runqhead     uint32       // 将要运行的goroutine的队列头，无锁访问
+	runqtail     uint32       // 将要运行的goroutine的队列尾，无锁访问
+	runq         [256]uintptr // 将要运行的goroutine的队列，无锁访问
+	runnext      uintptr      // 下一个将由P执行的G，如果非空，优先级大于runq，如果当前G还有剩余时间，runnext将会继续使用剩余时间，它的值可能会被其他P置为空，但只有当前P才能置为有效的G
+	preempt      bool         // 为true表示这个P应该尽快进入调度程序
+	gFree        struct {     // 可用的G缓存，这里保存的都是status==Gdead的G
+		gList
+		n int32
+	}
+}
+```
+
+P作为处理器实现，M则是代表操作系统线程，G则是goroutine。P的引入解耦了G和M的依赖，实现了任意的G运行在M上。
+
+#### G
+
+G的状态有很多，我们不会全部列举，这里只需要知道状态可以分为三大类：runnable，running，waiting；很像操作系统的线程状态。
+
+G结构体里包含一个stackguard0和stackguard1字段，这两个字段用于函数调用时，检测剩余栈空间是否足以支撑一次函数调用，如果不够，触发栈增长，Go函数的栈类似切片，可以动态增长且连续。
+
+sched字段保存goroutine执行相关的寄存器，每次发生上下文切换都会把当前goroutine的寄存器的值保存进sched里面去。
+
+此外还有创建goroutine的go语句的GC和goroutine函数的GC，一般来说，新的goroutine会拥有自己的栈空间，在执行go语句的原goroutine中，go语句不过是一次函数调用，所以我们需要保存返回地址，类似的，新的goroutine函数的指令执行地址也会在初始化完毕后填充进startpc字段，指出goroutine从哪里开始执行。
+
+当发生协作式抢占，stackguard0的值会被设置为StackPreemet表示发生其他goroutine期望停下这个goroutine；当发生信号抢占时，preemptStop会被设置为true，status会被设置为_Gpreempted。
+
+还有一个gFree字段，把它理解成空闲G的缓存池就行，免得每次都要新建一个G，一个G执行完之后，状态会被切为Gdead，然后就可以被加入到P的缓存池。
+
+#### M
+
+M则是映射到真实的操作系统线程，它拥有真正执行代码的能力，这里可以看到它有三个G，G0拥有的是系统栈，即线程栈，大小为8M；G0只做调度使用，它就像这个M里的管家，管理着所有试图运行在此M上的用户goroutine。curg就是当前在运行的用户G；gsignal则是处理信号的G，比方说处理抢占式信号。
+
+这里还可以看到old/next P，当发生系统调用时，为了不阻塞程序和调度其他的G，会在超过10ms之后分离P和M，被分离的M继续执行阻塞系统调用，直到有结果返回，写入给NetPoll等待被处理；被分离的P就可以寻找下一个M去执行代码，如果找不到空闲的就新建一个M。所有有old表示与M分离的P，next表示另一个被分离的P准备找自己来执行代码。
+
+这里提一下，Go对于新建的M会采用复用技术，如果M阻塞调用返回，则把M放入缓存池，长时间不用就会释放M，有点其他语言的线程池的味道了。
+
+spining字段指出当前M是否在尝试进行工作窃取，工作窃取大意就是从其他P的手上拿一半的G放到自己的P的队列中去执行，如果窃取失败则为false，然后P进入空闲状态，M被挂起。
+
+此外，M还持有全局调度记录表的指针，用来和全局调度记录表打交道，在整个Go程序中，有且只有一个全局调度记录表。
+
+还有一个lockedg字段，用于当G需要独占M时使用，这在CGO比较常见，因为一些C函数要求持续调用。
+
+#### P
+
+P的状态比较特殊，它只有俩：idle和running，idle的P会被添加至sched的空闲P列表中。
+
+P还包含一些用于sysmon判断当前G是否运行的够久了以至于切换G的字段，除此之外，P还拥有runnext字段，指出下一个运行的G，在这里可以实现插队运行，同时P还有就绪G队列，这里的队列是一个定长的环形数组。
+
+此外，P还拥有空闲G缓存，减少对于G的重复新建；同样的结构依旧存在于全局调度记录表里。
+
+这里我们不得不在引入一个和调度记录相关的结构，即全局调度记录表：
+
+``` go
+type schedt struct {
+	goidgen   uint64   // goroutine的ID
+	lastpoll  uint64   // 上次NetPoll的时间，如果正在轮训则为0
+	pollUntil uint64   // 直到这个时间之前，轮训都不会唤醒
+	lock      mutex    // 锁
+	midle     uintptr  // 等待干活的空闲M的列表指针
+	nmidle    int32    // 等待干活的空闲M的数量
+	ngsys     uint32   // 系统goroutine的数量
+	pidle     uintptr  // 等待干活的空闲P的列表指针
+	npidle    uint32   // 等待干活的空闲P的数量
+	runq      gQueue   // 全局可运行的G队列
+	runqsize  int32    // 全局可运行的任务队列的大小
+	freem     *m       // 可释放的m的列表
+	gFree     struct { // 全局缓存的G的列表
+		lock    mutex
+		stack   gList
+		noStack gList
+		n       int32
+	}
+}
+```
+
+全局调度记录表sched包含一些关于NetPoll的字段，用来在切换G时处理就绪的IO事件，同时它还拥有空闲M和空闲P相关的字段，记录这些空闲的家伙以便后续使用；注意到sched也拥有就绪G列表，而且是不限大小的，以及全局空闲G缓存列表，这两个作用和在P里是一样的。
+
+然后我们还要引入相关的全局变量：
+
+``` go
+var (
+	allm                 *m
+	gomaxprocs           int32
+	ncpu                 int32
+	forcegc              forcegcstate
+	sched                schedt // 调度器
+	newprocs             int32
+	allpLock             mutex // 用于保护 allp, idlepMask, timerpMask, 和 allp 的读写
+	allp                 []*p  // P列表
+	idlepMask            pMask
+	timerpMask           pMask
+	gcBgMarkWorkerPool   lfstack
+	gcBgMarkWorkerCount  int32
+	processorVersionInfo uint32
+	isIntel              bool
+	lfenceBeforeRdtsc    bool
+	goarm                uint8 // set by cmd/link on arm systems
+)
+```
+
+我们可以看到，P列表时固定大小的(启动时会进行截断处理且后续不会更改)，且这里有且只有一个sched，说明Go程序只会通过一个全局调度记录表来作为记录，注意这里是记录，因为G的调度实际是由每个M的G0来实现的。
+
+现在来看看调度方法schedule的实现：
+
+``` go
+```
+
+
+
 ## 垃圾回收
 
 ## 远程调用
