--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1067,12 +1067,41 @@ var (
 
 我们可以看到，P列表时固定大小的(启动时会进行截断处理且后续不会更改)，且这里有且只有一个sched，说明Go程序只会通过一个全局调度记录表来作为记录，注意这里是记录，因为G的调度实际是由每个M的G0来实现的。
 
-现在来看看调度方法schedule的实现：
+这里面提到了G0个G，G0的栈称为“系统栈”，用户goroutine的调度需要在系统栈完成，所以每次调度涉及到栈的切换。其实栈的切换不是什么很高大上的事，就是当前执行的代码使用的栈空间变成了G0的而已，切换到用户栈就是使用G的栈去执行，或者说某个方法它的栈就是在G0上的，那么跳转到这个方法去执行就是切换到了G0栈。
 
-``` go
-```
+goroutine的调度核心在schedule方法，当一个M启动之后，会触发schedule的运行，这个方法是一个永不返回的方法，不是说它有个死循环之类的，而是指它调度别的goroutine去运行，然后运行的goroutine会因为各种原因再次调用schedule去执行新的调度，所以有schedule->goroutine->schedule这样的循环。我们称之为**循环调度**。
 
+现在从一个Go程序被编译完毕之后，执行这个程序的整个流程来分析：
 
+- schedinit：**初始化G0，初始化M0，并设置它俩的绑定**，这也是M0和其他M的区别，也是M0的G0和其他G0的区别，因为此时程序尚未运行，不能走常规的那套创建M创建G0的流程，需要“特殊处理一下”；获取CPU个数，**设置程序NCPU的值**，调用procresize。
+- procresize：根据NCPU重新**调整P列表的大小**，并实例化所有的P；判断M0是否拥有P，没有的话**P[0]分配给M0**，并设置P的状态为running，把**其他的P添加到空闲P列表**。
+- newproc：**go关键字的函数语义**；尝试进行main goroutine的执行，会触发main goroutine的创建，进而转换成对于newproc的调用；此函数会在**把栈切换至系统栈**并调用newproc1，对其传参为go关键字后面的函数，即需要在新的goroutine执行的函数，参数地址，参数数量，调用者G，函数起始PC。
+- newproc1：尝试从当前P的G缓存获取，获取不到去全局G缓存，还是获取不到，新建一个G；计算参数需要的栈空间，分配2KB大小的栈内存，设置sched字段，其中会指出当函数执行之后，跳转至goexit函数，实现扫尾工作，通过设置sched.pc字段实现；**返回新的G**。
+- runqput：把得到的**G添加到当前P的就绪队列中**，如果满了，添加至sched的全局就绪队列，判断主线程是否启动，启动之后调用wakeup。
+- wakeup：寻找合适的P执行刚刚得到的G，这里包括判断是否有M在尝试窃取工作，如果没有(就说明其他的M要么在闲的没事干，要么压根没创建别的M)，则调用startm。
+- startm：尝试获取一个空闲的P，获取不到说明此时程序挺忙的，返回就行，由当前P自行处理或者等着被窃取。如果**得到了P**，则**尝试为它分配一个M**，这里包括去全局空闲M列表获取，并绑定P到它的nextp上，**或者创建一个新的M**；新建一个M涉及到很多步骤，包括**分配新的M的空间**，**开辟G0的空间**，并**绑定G0到M**，然后调用**newosproc去执行M的实际创建**，包括**调用pthread_create并把mstart作为线程入口函数**(就是线程启动时会执行的函数)**传进去**，然后绑定nextp；调用notewakeup唤醒M去执行。
+- mstart：newproc结束之后，调用mstart方法(这种方式只会在初始执行时出现，因为M已经通过汇编创建，所以不是上述的常规流程那种会自动执行mstart)，启动main goroutine，此方法仅允许G0执行；mstart会调用mstart1，然后经过一堆处理，调用**schedule**方法，进入实际的调度。
+- schedule：设置需要执行的G的相关参数，同时对这个G的sched结构体写入goexit地址，goexit表示goroutine执行完毕后被调用的退出函数，包括解绑G与P，把G加入空闲列表，**调用schedule方法再次开始调度**等操作，对于goroutine的执行，细节一点来说，是调用了gogo函数，gogo才会真的设置G的sched的字段，包括goexit地址，调用者地址等；最后转到G的栈去执行goroutine定义的函数。所以我们说schedule永不返回就是这个意思。
+
+此外，除了goroutine正常执行完触发goexit的执行进而触发再调度之外，还有以下其他的方式去触发：
+
+- gopark：主动挂起方法，会触发dropg方法解绑G和P，然后调用schedule触发再调度。
+- 执行系统调用：会挂起当前G，让M去执行syscall，然后给P分配新的M；等到执行syscall的M返回，会为G分配P，触发再调度等待调度。
+- 抢占式调度：挂起当前G，触发再调度。
+
+上述函数多吗？其实不多，源码大概有二三十个，我尽可能压缩多个函数成一段话，然后给出一个笼统的执行机制，从这种角度来看，Go的调度，goroutine的实现可以很难，也可以很简单，因为现在我们确实理顺了它整个的执行过程，但是很多细节处理，以及性能优化，则是我们无法触及的。这一节我写了三天，引用了很多文章，现在要破例给出链接，因为我也可能在未来的某一天记混了某些概念和原理：
+
+[Go语言设计与实现——调度器](https://draveness.me/golang/docs/part3-runtime/ch06-concurrency/golang-goroutine/)
+
+[详解Go语言调度循环源码实现](https://www.luozhiyun.com/archives/448)
+
+[schedule循环是如何运转的](https://golang.design/go-questions/sched/sched-loop-exec/)
+
+[5.2 goroutine的生老病死](https://tiancaiamao.gitbooks.io/go-internals/content/zh/05.2.html)
+
+[13-goroutine创建过程](https://blog.csdn.net/svasticah/article/details/94345696)
+
+[[详解 Go 程序的启动流程，你知道 g0，m0 是什么吗？](https://segmentfault.com/a/1190000040181868)](https://segmentfault.com/a/1190000040181868)
 
 ## 垃圾回收
 
