--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1103,6 +1103,91 @@ goroutine的调度核心在schedule方法，当一个M启动之后，会触发sc
 
 [[详解 Go 程序的启动流程，你知道 g0，m0 是什么吗？](https://segmentfault.com/a/1190000040181868)](https://segmentfault.com/a/1190000040181868)
 
+## NetPoll
+
+当我们写tcp服务时，每次发生一个连接，都会返回一个用于读写的socket，然后在新的goroutine中处理。这里我们可能有这么一的疑问：goroutine是怎么感知socket读写就绪的？
+
+在以往的编程方式中，我们会把当前线程阻塞，直到可用，但是goroutine不是操作系统线程，如果阻塞则会导致当前线程上的所有goroutine都无法工作，如果此时分离P和M，然后开辟新的线程，那就失去了goroutine的意义，因为这样做完全是复刻了一个线程一个请求的方式。那么有没有别的方式可以做到对goroutine的通知，同时还不会依赖线程阻塞来实现呢？
+
+Linux有一种IO多路复用机制，称为“select”，在Kernel2.6之后引入了改进版的epoll(对应FreeBSD的kqueue)，多路复用技术是一种单线程监控多IO文件可读可写的机制，Linux中万物皆文件，所以网络IO亦可以这么实现。
+
+这里浅显的提一下这种机制，首先是select的实现，它依赖于一个fd_set，这里面保存了所有需要监控的fd，且对fd进行排序，用bit表示监听的fd，在一个字节中，想要监听第六个fd，则fd_set=0010 0000；每次调用select，需要传入fd_set，返回值为fd掩码，即fd_set上对应的就绪fd称为1，其余保持0，所以在传入select之前，需要保存fd_set，然后复制到select中；同时select返回值也是一整个fd_set，无法判断究竟是谁就绪了，需要自行遍历。
+
+为了改变这种比较低效方式(多复制，一次返回全部，监听数量限制等)，Linux引入了epoll调用，epoll涉及到**三个函数**：
+
+- int epoll_create(int size)：创建一个epoll实例并返回其fd。
+- int epoll_ctl(int epoll_fd, int operation, int fd, struct poll_event *event)：向一个epoll实例注册/更改/删除一个需要监听的fd，并指出需要监听的事件类型：包括读/写/紧急事件/错误/设置边缘触发/被中断/只监听一次。
+- int epoll_wait(int epoll_fd, struct epoll_event *event_array, int max_events, int timeout)：对于指定的epoll实例，设置等待超时时间，并阻塞当前线程直到有事件就绪，或者超时，并且提供一个就绪事件写入地址。
+
+为什么这里会提及Linux的多路复用呢？回到上面对于socket就绪读写的回答，我们可以通过运行时机制去维护epoll，完成一个运行时线程管理所有socket读写的目标，然后在某一socket就绪，调度对应的goroutine即可，而这些步骤，就被Go封装为了**NetPoll**实现。
+
+**通过NetPoll，可以由sysmon监听所有的socket，并在epoll_wait返回时调度就绪socket对应的goroutine**。
+
+现在来看看和NetPoll相关的一些结构：
+
+``` go
+type epollevent struct {
+	events uint32
+	data   [8]byte // 用户数据，在Go里，我们在这里保存pollDesc的指针
+}
+
+type pollDesc struct {
+	link           *pollDesc // 作用于pollCache中，链接下一个pollDesc，由lock保证
+	lock           mutex     // protects the following fields
+	fd             uintptr   // 当前pollDesc对应的fd
+	closing        bool      // 是否关闭
+	everr          bool      // marks event scanning error happened
+	user           uint32    // user settable cookie
+	readSeq        uintptr   // 防止上一次的读取超时计时器生效，这里需要说明，pollDesc可以被复用，所以可能保存着上一次的读取超时计时器，通过每次复用+1并比对计时器保存的seq的值来判断是否一致
+	readGoroutine  uintptr   // 想对此pollDesc上的fd进行读但是被阻塞的goroutine，它可为pdReady(表示就绪)，pdWait(表示等待就绪)，gID(表示被阻塞的goroutine)，0四个值
+	readTimer      timer     // 读操作超时计时器
+	readDeadline   int64     // 读操作超时时间
+	writeSeq       uintptr   // 同上
+	writeGoroutine uintptr   // 同上
+	writeTimer     timer     // 写操作超时计时器
+	writeDeadline  int64     // 写操作超时时间
+	self           *pollDesc // storage for indirect interface. See (*pollDesc).makeArg.
+}
+
+type pollCache struct {
+	lock  mutex     // 锁
+	first *pollDesc // 第一个pollCache的指针
+}
+```
+
+这里需要说明一下，Go并没有直接使用相关socket的fd，而是进行了封装。这么做的目的是，我们需要记录fd和goroutine之间的关系，而且也需要对每一个goroutine的读写操作进行可能的超时限制，而这个封装，就是pollDesc实现的。
+
+此外，为了减少内存创建带来的额外开销，这里依旧使用了复用机制，每次会优先从pollCache获取结构体；对于不再使用的fd，我们会把和它相关的pollDesc添加到pollCache中。
+
+Go中关于NetPoll的操作有如下几个方法：
+
+``` go
+func runtime_pollServerInit()
+func runtime_pollOpen(fd uintptr) (uintptr, int)
+func runtime_pollClose(ctx uintptr)
+func runtime_pollWait(ctx uintptr, mode int) int
+func runtime_pollWaitCanceled(ctx uintptr, mode int) int
+func runtime_pollReset(ctx uintptr, mode int) int
+func runtime_pollSetDeadline(ctx uintptr, d int64, mode int)
+func runtime_pollUnblock(ctx uintptr)
+func runtime_isPollServerDescriptor(fd uintptr) bool
+```
+
+这里我们重点关注一下init，open和wait这三个方法，这些方法的实现视具体机器而定，我们以Linux为例。
+
+首先是init方法，此方法实现比较存粹，就是创建一个epoll实例，然后把它的fd保存在全局变量中，**在一个Go程序中，只有一个全局NetPoll实例**。对于init方法，会通过Once.Do()来保证。Go程序中有很多地方需要主动唤醒epoll，所以在初始化阶段，我们会创建一个管道，这个管道可以进行读写操作，我们把它的**读操作注册进epoll**，当我们想唤醒时，通过写端**向里面写数据**即可，这样这**个管道就成了可读的**了，然后**epoll就会感知，然后返回**。
+
+然后是open方法，open方法比较直观，调用epoll_create方法添加pollDesc包含的fd，感兴趣的事件类型为：读，写，FD被中断，边缘触发；同时设置epollevent的data为pollDesc的指针；这里需要小提一下，就是pollDesc的实例被分配在了一个固定区域，这里不出发生GC，这样也会符合CGO的原则之一。
+
+wait，在源码里又叫netpoll，算是核心方法了，实现不算复杂：
+
+- 把传入的ns时间转成ms时间，调用epoll_wait方法，等待返回；
+- 遍历返回的epollevent数组，剔除data为空的，把得到的epollevent里保存的goroutine添加至就绪列表，如果读写同时就绪，则添加两次，同时更新goroutine状态为Ready，等待调度。
+
+在schedule里会进行netpoll的调用，并设置超时时间，这里的超时时间也很有意思，还记得我们在定时器一节提到过定时器和NetPoll的梦幻联动吗？这里的**超时时间**，就是**整个程序中最早执行的定时器的到期时间**。这样当定时器到时，schedule获得执行，后续的checkTimers也会得到执行。
+
+NetPoll还有一个唤醒方法，也是很直白的：直接向通道的写端写数据即可。这样就可以触发epoll的唤醒，原理就是epoll监控的一个读fd变成可读的了。
+
 ## 垃圾回收
 
 ## 远程调用
